Branch SponsorFix: Swatted a Bug. Made Changes as recommended by the Sponsor. Improved Aesthetics. Ready to merge to master.  - Fixed a Bug. Now onLoad, ContentHolder does not show Content of all    Sections.  - Added Sponsor and BITS - Pilani Logo to Banner. Added Corresponding    links to them.  - Added Hover Effect to Banner Bar Title.  - Re - Aligned ContentHolders' and NavBar.  - Changed NavBar Links and Corresponding Content as per recommendations    by Sponsor.  - Changed Content Font from 'Bebas'.  - Improved Semantics and Flow.

--- a/formatting.css
+++ b/formatting.css
@@ -27,6 +27,9 @@ a
 .wrapper
 {
 	background-image: url(./images/background.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%;
     width: 100%;
 	height: 640px;
 }
@@ -35,14 +38,26 @@ a
 {
 	float: left;
 	width: 80%;
+	margin-left: 30px;
+	margin-top: 40px;
+	margin-bottom: -20px;
 }
 
 #titleBanner
-{
-	text-indent:30px;
-	font-size: 45px;
-	font-family: "Bebas", "Arial Narrow Bold", "Arial Bold";
+{	font-size: 35px;
+	font-family: "Bebas", "Arial Narrow";
 	color: #CA7620;
+}
+
+#titleBanner:hover
+{
+	color: #CC0000;
+}
+
+#sponsorLogo
+{
+	position: absolute;
+	margin-top: -20px;
 }
 
 .navColumn
@@ -64,12 +79,17 @@ a
 	color: #ECBB86;
 }
 
-#navElementRules:hover
+#navElementUnplugged:hover
 {
 	color: #ECBB86;
 }
 
-#navElementParticipate:hover
+#navElementAxetacy:hover
+{
+	color: #ECBB86;
+}
+
+#navElementRocktavesCOM:hover
 {
 	color: #ECBB86;
 }
@@ -81,13 +101,33 @@ a
 
 .contentHolderColumn
 {
-	width: 550px;
-	height: 285px;
 	overflow: auto;
+	width: 550px;
+	height: 385px;
 	text-align: justify;
 	display: inline-block;
-	font-family: "Bebas", "Tahoma", "Verdana";
+	font-family: "Tahoma", "Verdana";
 	color: #CA7620;
+}
+
+#contentHolderAbout
+{
+	display: none;
+}
+
+#contentHolderUnplugged
+{
+	display: none;
+}
+
+#contentHolderAxetacy
+{
+	display: none;
+}
+
+#contentHolderRocktavesCOM
+{
+	display: none;
 }
 
 .clearDiv
